[gd_scene load_steps=15 format=3 uid="uid://loliv7i1ogd4"]

[ext_resource type="Script" uid="uid://c3y84dmw8ogu8" path="res://Scripts/themes.gd" id="1_ybxo7"]
[ext_resource type="Script" uid="uid://b4nylonognjid" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_sabvh"]
[ext_resource type="Theme" uid="uid://05h73wxcxmxi" path="res://Themes/frozen_dark/themes/title.tres" id="3_t7cpk"]
[ext_resource type="Script" uid="uid://5ept7u3mbcte" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_k4wpf"]
[ext_resource type="Theme" uid="uid://db2s4j5s8cswq" path="res://Themes/frozen_dark/themes/ui_button_icon.tres" id="4_sabvh"]
[ext_resource type="Texture2D" uid="uid://byb61wp4eko8q" path="res://Themes/frozen_dark/gui/arrow_back.svg" id="6_blm7s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utc76"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_p6ew6"]
offsets = PackedFloat32Array(0, 0.333333, 0.666667, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 3

[sub_resource type="GradientTexture1D" id="GradientTexture1D_eiw8h"]
gradient = SubResource("Gradient_p6ew6")
width = 32

[sub_resource type="Resource" id="Resource_ujp2y"]
script = ExtResource("4_k4wpf")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_0cy5b"]
script = ExtResource("4_k4wpf")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Animation" id="Animation_x1vyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/Back:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Title:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Preview:anchor_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/Preview:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/ThemeName:anchor_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/ThemeName:anchor_right")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Control/FadeMask:anchor_left")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.016]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Control/FadeMask:anchor_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.984]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Control/FadeMask:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i8uy4"]
resource_name = "open"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/Back:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Title:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Preview:anchor_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/Preview:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/ThemeName:anchor_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/ThemeName:anchor_right")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Control/FadeMask:anchor_left")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.15, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 0.016]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Control/FadeMask:anchor_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.15, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 0.984]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Control/FadeMask:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.4),
"transitions": PackedFloat32Array(0.25, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwo3q"]
_data = {
&"RESET": SubResource("Animation_x1vyq"),
&"open": SubResource("Animation_i8uy4")
}

[node name="Themes" type="CanvasLayer"]
script = ExtResource("1_ybxo7")

[node name="Blur" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Preview" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
offset_left = 8.0
offset_top = -272.0
offset_right = -8.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_utc76")

[node name="ThemeName" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
offset_left = 8.0
offset_top = 192.0
offset_right = -8.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_utc76")

[node name="FadeMask" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.267
anchor_right = 0.5
anchor_bottom = 0.833
offset_left = -0.192
offset_top = -0.320007
offset_right = 0.191986
offset_bottom = 0.320007
texture = SubResource("GradientTexture1D_eiw8h")
expand_mode = 1

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Control/FadeMask"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
script = ExtResource("3_sabvh")
wheel_scroll_damper = SubResource("Resource_ujp2y")
dragging_scroll_damper = SubResource("Resource_0cy5b")
metadata/_custom_type_script = "uid://b4nylonognjid"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/FadeMask/SmoothScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 8.0
offset_top = 48.0
offset_right = -8.0
offset_bottom = 128.0
grow_horizontal = 2
theme = ExtResource("3_t7cpk")
text = "KEY_THEMES"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Back" type="Button" parent="Title"]
modulate = Color(1, 1, 1, 0)
top_level = true
layout_mode = 1
offset_left = 16.0
offset_top = 56.0
offset_right = 80.0
offset_bottom = 120.0
theme = ExtResource("4_sabvh")
icon = ExtResource("6_blm7s")
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_gwo3q")
}

[connection signal="gui_input" from="Control/FadeMask/SmoothScrollContainer" to="." method="_on_smooth_scroll_container_gui_input"]
[connection signal="pressed" from="Title/Back" to="." method="_on_back_pressed"]
